--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -512,14 +512,23 @@ div.vws {
 	width: 225px;
 }
 
-#qview-side > div, #recent-tags > div {
+#qview-side>div,#recent-tags>div {
 	padding-left: 10px;
 }
 
-.usr_info {
-	background-color: #E7E7E7;
+.usr_info,.usr_info2,.usr_info3 {
 	padding: 2px;
 	margin-top: 2px;
+	position: relative;
+	float: right;
+}
+
+.usr_info {
+	background-color: #E1EAF2;
+}
+
+.usr_info3 {
+	background-color: #EDEDED;
 }
 
 .deletedby {
@@ -1168,11 +1177,6 @@ table.foot {
 table.foot td.post_menu,table.foot td.td_poster {
 	vertical-align: top;
 	width: 50%;
-}
-
-.usr_info {
-	position: relative;
-	float: right;
 }
 
 div#answer_form {
