Bug fixes, changed methods of Request class and changed other classes affected by this change

--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -343,6 +343,11 @@ h3 {
 	background-position: -418px -58px;
 }
 
+.profile {
+	background-position: -238px -28px;
+}
+
+
 #recent-tags {
 	padding-left: 10px;
 }
