several bug fixes related to changes to !config.ini file

--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,15 +768,17 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                                         
-		 10);
+	filter: alpha(opacity =
+		                                                         
+		  10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                                         
-		 0);
+	filter: alpha(opacity =
+		                                                         
+		  0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1325,8 +1327,9 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                         
-		 25);
+	filter: alpha(opacity =
+		                                                         
+		  25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1717,22 +1720,24 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                    
-		                      DXImageTransform.Microsoft.AlphaImageLoader (   
+	filter: progid :                                     
+		                       DXImageTransform.Microsoft.AlphaImageLoader (
+		   
 		      
 		             
 		 
 		    
-		                           src =                            
+		                            src =                             
 		
 		                      
-		      '../../build/colorpicker/assets/picker_mask.png', sizingMethod =
+		       '../../build/colorpicker/assets/picker_mask.png', sizingMethod
+		= 
 		 
 		   
 		                
 		 
 		   
-		                             'scale' );
+		                              'scale' );
 }
 
 .yui-picker-mask {
@@ -1907,8 +1912,9 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                         
-		 25);
+	filter: alpha(opacity =
+		                                                         
+		  25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2013,8 +2019,9 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                         
-		 12);
+	filter: alpha(opacity =
+		                                                         
+		  12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2119,8 +2126,9 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                                         
-		 12);
+	filter: alpha(opacity =
+		                                                         
+		  12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2182,8 +2190,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                         
-		 0);
+	filter: alpha(opacity =
+		                                                         
+		  0);
 }
 
 .yui-dt-resizerproxy {
@@ -2192,8 +2201,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                         
-		 0);
+	filter: alpha(opacity =
+		                                                         
+		  0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2289,8 +2299,9 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                         
-		 25);
+	filter: alpha(opacity =
+		                                                         
+		  25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2677,15 +2688,17 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2783,8 +2796,9 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-editor-container iframe {
@@ -3885,8 +3899,9 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4653,8 +4668,9 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                         
-		 12);
+	filter: alpha(opacity =
+		                                                         
+		  12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5165,14 +5181,16 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                                         
-		 0);
+	filter: alpha(opacity =
+		                                                         
+		  0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5260,8 +5278,8 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                                        
-		  100);
+	filter: alpha(opacity =                                                         
+		   100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5517,15 +5535,17 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5623,8 +5643,9 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                         
-		 50);
+	filter: alpha(opacity =
+		                                                         
+		  50);
 }
 
 .yui-editor-container iframe {
@@ -7665,10 +7686,10 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                          
-		    DXImageTransform.Microsoft.gradient (      
-		             startColorstr =      "#0000FF", endColorstr =     
-		"#19558D" );
+	filter: progid :                           
+		     DXImageTransform.Microsoft.gradient (       
+		              startColorstr =        "#0000FF", endColorstr =      
+		 "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -7703,10 +7724,14 @@ a#asignup {
 	margin-left: 1px;
 }
 
-.com_connect {
+div.com_connect {
 	clear: both;
 	float: left;
 	margin-top: 5px;
+}
+
+div.com_connect img {
+	margin-right: 5px;
 }
 
 h3 {
@@ -8229,9 +8254,9 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :     DXImageTransform.Microsoft.gradient (    
-		startColorstr =  
-		  "#A7BBCC", endColorstr =     "#879BAD" );
+	filter: progid :       DXImageTransform.Microsoft.gradient (     
+		 startColorstr =   
+		   "#A7BBCC", endColorstr =       "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9117,6 +9142,12 @@ fieldset#header {
 .uwelcome {
 	padding-left: 10px;
 	padding-right: 10px;
+	border-top-left-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	border-top-right-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-moz-border-radius-topright: 5px;
 }
 
 td.avatar {
@@ -9133,8 +9164,8 @@ td.avatar img {
 }
 
 td.avatar img.iconfb,td.avatar img.icontw {
-	margin-left: -8px; 
-	margin-bottom : -3px;
+	margin-left: -8px;
+	margin-bottom: -3px;
 	border: none;
 	padding: 0;
 	display: inline;
